--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>微信公众号文章编辑器</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="专业的微信公众号文章编辑器，支持 Markdown 编辑，实时预览，一键排版，让您的文章更具吸引力。" />
+    <meta name="keywords" content="微信公众号,文章编辑器,Markdown编辑器,排版工具,内容创作" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="微信公众号文章编辑器 - 专业的内容创作工具" />
+    <meta property="og:description" content="专业的微信公众号文章编辑器，支持 Markdown 编辑，实时预览，一键排版，让您的文章更具吸引力。" />
+    <meta property="og:type" content="website" />
+
+    <!-- Mobile Optimization -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- 网站图标 -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <title>微信公众号文章编辑器 - Markdown 排版工具</title>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "微信公众号文章编辑器",
+      "description": "专业的微信公众号文章编辑器，支持 Markdown 编辑，实时预览，一键排版",
+      "applicationCategory": "编辑工具",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "CNY"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
