--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="theme-color" content="#ffffff" />
 
+    <meta name="referrer" content="never">
+
     <!-- 网站图标 -->
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
